--- a/style.css
+++ b/style.css
@@ -16,3 +16,39 @@ body {
     padding-left: 10px;
     width: 300px;
 }
+
+fieldset {
+    display: table;
+}
+fieldset p {
+    display: table-row;
+}
+fieldset button, 
+fieldset input, 
+fieldset select, 
+fieldset label {
+    display: table-cell;
+    margin: 5px;
+}
+fieldset label {
+    text-align: right;
+}
+
+.button {
+    background-color: rgb(128, 128, 128);
+    border: none;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+  }
+
+.button1 {border-radius: 2px;}
+.button2 {border-radius: 4px;}
+.button3 {border-radius: 8px;}
+.button4 {border-radius: 12px;}
+.button5 {border-radius: 50%;}
+
